--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -6,6 +6,7 @@
   width: 85%;
   max-width: 1160px;
   margin: 0 auto;
+  padding-bottom: 48px;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -143,11 +144,12 @@
 
 @media (max-width: $tablet-width) {
   .intro {
-    background: conic-gradient(from 139.4deg at 20.7% 35.74%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
+    background: conic-gradient(from 139.4deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
   }
 
   .intro__container {
     width: 88%;
+    padding-bottom: 82px;
   }
 
   .intro__top {
@@ -213,6 +215,7 @@
 
   .intro__container {
     width: 91%;
+    padding-bottom: 0;
   }
 
   .intro__top {
