--- a/source/sass/blocks/membership.scss
+++ b/source/sass/blocks/membership.scss
@@ -113,11 +113,13 @@
 
   &::after {
     content: "";
+    display: none;
     width: 100%;
     height: 100%;
     background-color: transparent;
     border: 7px solid;
     border-image: linear-gradient(to right bottom, red, blue);
+    border-image-slice: 1;
     position: absolute;
     top: 0;
     left: 0;
@@ -177,10 +179,16 @@
   border: 2px solid #102654;
 }
 
-.membership__type-link:hover .membership__buy {
-  background: linear-gradient(111.72deg, #ed0233 17.6%, #003eb7 95.31%);
-  color: #ffffff;
-  border-color: inherit;
+.membership__type-link:hover {
+  & .membership__buy {
+    background: linear-gradient(111.72deg, #ed0233 17.6%, #003eb7 95.31%);
+    color: #ffffff;
+    border-color: inherit;
+  }
+
+  &::after {
+    display: block;
+  }
 }
 
 @media (max-width: $tablet-width) {
@@ -259,6 +267,10 @@
     font-size: 16px;
     line-height: 24px;
     margin-right: 46px;
+  }
+
+  .membership__tab-button--active::after {
+    top: 35px;
   }
 
   .membership__type-item {
