feat(trainers) - add tablet and mobile version without js

--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -2,6 +2,7 @@
   width: 85%;
   max-width: 1160px;
   margin: 0 auto;
+  padding-top: 88px;
 }
 
 .trainers h2 {
@@ -12,21 +13,17 @@
   color: #102654;
   margin: 0;
   margin-bottom: 52px;
-  padding-top: 88px;
 }
 
 .trainers__slider {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .trainers__slide {
   width: 22.4%;
-  margin-right: 40px;
   position: relative;
-
-  &:last-child {
-    margin-right: 0;
-  }
 
   &:hover .trainers__popup {
     display: flex;
@@ -50,7 +47,7 @@
 
 .trainers__slide img {
   display: block;
-  width: 260px;
+  width: 100%;
   height: 294px;
   z-index: -1;
 }
@@ -59,7 +56,7 @@
   width: 100%;
   height: 100%;
   padding-top: 52px;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgba(16, 38, 84, 0.89);
@@ -73,7 +70,7 @@
   line-height: 27px;
   font-style: normal;
   font-weight: bold;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 0;
 }
 
@@ -98,7 +95,7 @@
   line-height: 21px;
   font-style: normal;
   font-weight: normal;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 14px;
   padding-left: 26px;
   position: relative;
@@ -116,5 +113,62 @@
     position: absolute;
     top: 7px;
     left: 10px;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .trainers__container {
+    width: 88%;
+    padding-top: 68px;
+  }
+
+  .trainers h2 {
+    font-size: 42px;
+    line-height: 42px;
+    text-align: center;
+    margin-bottom: 41px;
+  }
+
+  .trainers__slider {
+    padding-right: 8%;
+    padding-left: 8%;
+  }
+
+  .trainers__slide {
+    width: 47.4%;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .trainers__container {
+    width: 91%;
+    padding-top: 38px;
+  }
+
+  .trainers h2 {
+    font-size: 32px;
+    line-height: 32px;
+    margin-bottom: 43px;
+  }
+
+  .trainers__slider {
+    padding-right: 11%;
+    padding-left: 11%;
+  }
+
+  .trainers__slide {
+    width: 100%;
+  }
+
+  .trainers__slide img {
+    height: 274px;
+  }
+
+  .trainers__popup {
+    padding-top: 42px;
+  }
+
+  .trainers__popup-list {
+    width: 78%;
   }
 }
