--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -140,6 +140,7 @@
 @media (max-width: $tablet-width) {
   .stock__container {
     width: 88%;
+    padding-top: 99px;
   }
 
   .stock h2 {
@@ -182,6 +183,7 @@
 @media (max-width: $mobile-width) {
   .stock__container {
     width: 90.9%;
+    padding-top: 69px;
   }
 
   .stock h2 {
