--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -84,6 +84,14 @@
     line-height: 14px;
     color: #1c3374;
   }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .stock__year img {
