--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -127,6 +127,14 @@
   justify-content: center;
   padding: 24px 0;
   border: 4px solid #ffffff;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .promo img {
