feat(review) - add review block tablet/mobile version without js

--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -25,12 +25,12 @@
 }
 
 .review__card {
-  width: 84%;
+  width: 560px;
   display: flex;
   padding-top: 62px;
-  padding-right: 60px;
+  padding-right: 62px;
   padding-bottom: 58px;
-  padding-left: 62px;
+  padding-left: 60px;
   background: #1c3374;
   box-shadow: 0px 0px 40px rgba(28, 51, 116, 0.2);
 }
@@ -39,7 +39,7 @@
   display: block;
   width: 80px;
   height: 80px;
-  margin-right: 6%;
+  margin-right: 7%;
 }
 
 .review__card h3 {
@@ -82,3 +82,69 @@
   height: 32px;
 }
 
+@media (max-width: $tablet-width) {
+  .review__container {
+    width: 88%;
+    padding-top: 100px;
+    padding-right: 0;
+    padding-bottom: 100px;
+    padding-left: 0;
+  }
+
+  .review h2 {
+    font-size: 42px;
+    line-height: 42px;
+    margin-bottom: 40px;
+  }
+
+  .review__card {
+    width: 566px;
+    padding-right: 60px;
+    padding-left: 65px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .review__container {
+    width: 91%;
+    padding-top: 70px;
+    padding-right: 0;
+    padding-bottom: 70px;
+    padding-left: 0;
+  }
+
+  .review h2 {
+    font-size: 32px;
+    line-height: 32px;
+    margin-bottom: 42px;
+  }
+
+  .review__card {
+    width: 78%;
+    padding-top: 51px;
+    padding-right: 25px;
+    padding-bottom: 36px;
+    padding-left: 25px;
+    position: relative;
+  }
+
+  .review__card img {
+    width: 68px;
+    height: 68px;
+    position: absolute;
+    transform: translateY(-50%);
+    top: 22%;
+    left: 40px;
+  }
+
+  .review__card blockquote {
+    text-align: center;
+  }
+
+  .review__card h3 {
+    line-height: 24px;
+    margin-bottom: 24px;
+    margin-left: 99px;
+    text-align: left;
+  }
+}
