feat(contacts) - add full contacts block

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  background: linear-gradient(to right, #102654 50%, #ffffff 50%);
+  background: linear-gradient(to right, #102654 50.01%, #ffffff 50.01%);
   border-top: 1px solid #74819C;
 }
 
@@ -13,11 +13,14 @@
 
 .contacts__wrap {
   width: 50%;
-  padding-right: 170px;
-  padding-bottom: 69px;
+  padding-right: 14.5%;
+  padding-bottom: 64px;
+  background-color: #102654;
 
   &--white {
-    padding-left: 120px;
+    background-color: #ffffff;
+    padding-right: 1%;
+    padding-left: 10.5%;
   }
 }
 
@@ -32,6 +35,8 @@
   margin-bottom: 39px;
 
   &--blue {
+    width: 100%;
+    margin-bottom: 41px;
     color: #102654;
   }
 }
@@ -72,4 +77,192 @@
   margin-top: 28px;
   background-color: transparent;
   border: 3px solid #ffffff;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.contacts__box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 1px;
+    height: 91%;
+    background-color: #74819c;
+    position: absolute;
+    top: 4px;
+    left: 52%;
+  }
+}
+
+.contacts__column {
+  width: 40%;
+
+  &--right {
+    margin-left: auto;
+    padding-left: 5%;
+  }
+}
+
+.contacts__text {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.contacts__text b {
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: bold;
+  color: #102654;
+  width: 100%;
+  margin-bottom: 2px;
+}
+
+.contacts__text span {
+  font-size: 14px;
+  line-height: 21px;
+  font-style: normal;
+  font-weight: normal;
+  color: #102654;
+}
+
+.contacts__link {
+  font-size: 14px;
+  line-height: 21px;
+  font-style: normal;
+  font-weight: normal;
+  color: #102654;
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .contacts {
+    background: linear-gradient(to bottom, #102654 324px, #ffffff 324px);
+    border: none;
+  }
+
+  .contacts__container {
+    width: 88%;
+    padding-top: 0;
+    flex-wrap: wrap;
+  }
+
+  .contacts__wrap {
+    width: 100%;
+    padding-top: 69px;
+    padding-right: 17%;
+    padding-bottom: 69px;
+    padding-left: 13%;
+
+    &--white {
+      padding-bottom: 61px;
+    }
+  }
+
+  .contacts__title {
+    font-size: 42px;
+    line-height: 42px;
+    margin-bottom: 33px;
+  }
+
+  .contacts__input {
+    width: 44%;
+  }
+
+  .contacts__box::before {
+    left: 56%;
+  }
+
+  .contacts__text b {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 6px;
+  }
+
+  .contacts__text span {
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  .contacts__link {
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  .contacts__column {
+    width: 46%;
+
+    &--right {
+      padding-left: 12%;
+    }
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .contacts {
+    background: linear-gradient(to bottom, #102654 386px, #ffffff 386px);
+  }
+
+  .contacts__container {
+    width: 91%;
+  }
+
+  .contacts__wrap {
+    padding-top: 70px;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .contacts__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .contacts__input {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+
+  .contacts__button {
+    margin-top: 6px;
+  }
+
+  .contacts__box::before {
+    display: none;
+  }
+
+  .contacts__column {
+    width: 100%;
+    margin-bottom: 19px;
+
+    &--right {
+      padding-left: 0;
+      margin-bottom: 0;
+    }
+  }
 }
