--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -61,6 +61,18 @@
   border-left: none;
   border-right: none;
   border-bottom: 1px solid #74819c;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:focus {
+    outline: 2px solid #9b9b9b;
+  }
 }
 
 .contacts__button {
