--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "base.scss";
+@import "blocks/main.scss";
 @import "blocks/intro.scss";
 @import "blocks/about.scss";
 @import "blocks/membership.scss";
@@ -10,3 +11,4 @@
 @import "blocks/stock.scss";
 @import "blocks/review.scss";
 @import "blocks/contacts.scss";
+@import "blocks/footer.scss";
