feat(scss) - fix IE bugs, add webp graphic

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,4 +1,5 @@
 .intro {
+  background: linear-gradient(to top right, #003d85, #b80027);
   background: conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
 }
 
