--- a/source/sass/blocks/membership.scss
+++ b/source/sass/blocks/membership.scss
@@ -13,7 +13,8 @@
   padding-bottom: 190px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .membership h2 {
