--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -53,6 +53,7 @@
 }
 
 .review__card blockquote {
+  width: 330px;
   font-size: 16px;
   line-height: 22px;
   font-style: normal;
@@ -138,6 +139,7 @@
   }
 
   .review__card blockquote {
+    width: 100%;
     text-align: center;
   }
 
