--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "base.scss";
+@import "swiper.min.scss";
 @import "blocks/main.scss";
 @import "blocks/intro.scss";
 @import "blocks/about.scss";
@@ -10,5 +11,6 @@
 @import "blocks/advantages.scss";
 @import "blocks/stock.scss";
 @import "blocks/review.scss";
+@import "blocks/review-swiper.scss";
 @import "blocks/contacts.scss";
 @import "blocks/footer.scss";
