--- a/source/sass/blocks/review-swiper.scss
+++ b/source/sass/blocks/review-swiper.scss
@@ -1,4 +1,4 @@
-.slider-container {
+.review__slider-container {
   width: 100%;
   max-width: 673px;
   padding: 0;
@@ -8,15 +8,17 @@
   justify-content: space-between;
 }
 
-.swiper-container {
+.review__swiper-container {
   width: 560px;
   margin: 0 auto;
   padding: 0;
+  overflow: hidden;
 }
 
-.swiper-slide {
+.review__slide {
   width: auto;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .swiper-button-prev,
@@ -54,25 +56,25 @@
 }
 
 @media (max-width: $tablet-width) {
-  .slider-container {
+  .review__slider-container {
     max-width: 100%;
   }
 
-  .swiper-container {
+  .review__swiper-container {
     width: 566px;
   }
 }
 
 @media (max-width: $mobile-width) {
-  .slider-container {
+  .review__slider-container {
     width: 100%;
   }
 
-  .swiper-container {
+  .review__swiper-container {
     width: 90%;
   }
 
-  .swiper-slide {
+  .review__slide {
     width: 100%;
   }
 }
