--- a/source/sass/blocks/trainers-swiper.scss
+++ b/source/sass/blocks/trainers-swiper.scss
@@ -1,6 +1,5 @@
-.review__slider-container {
+.trainers__slider-container {
   width: 100%;
-  max-width: 673px;
   padding: 0;
   margin: 0 auto;
   display: flex;
@@ -8,21 +7,30 @@
   justify-content: space-between;
 }
 
-.review__swiper-container {
-  width: 560px;
-  margin: 0 auto;
+.trainers__swiper-container {
+  width: 91.3%;
+  margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
-.review__slide {
-  width: auto;
-  box-sizing: border-box;
-  flex-shrink: 0;
+.trainers__wrapper {
+  display: flex;
+  width: 100%;
 }
 
-.review__button-prev,
-.review__button-next {
+.trainers__slide {
+  position: relative;
+  box-sizing: border-box;
+  flex-shrink: 0;
+
+  &:hover .trainers__popup {
+    display: flex;
+  }
+}
+
+.trainers__button-prev,
+.trainers__button-next {
   position: static;
   padding: 0;
   margin-top: 5px;
@@ -42,40 +50,28 @@
   }
 }
 
-.review__button-prev:hover,
-.review__button-next:hover {
+.trainers__button-prev:hover,
+.trainers__button-next:hover {
   & svg {
     opacity: 0.6;
   }
 }
 
-.review__button-prev:active,
-.review__button-next:active {
+.trainers__button-prev:active,
+.trainers__button-next:active {
   & svg {
     opacity: 0.4;
   }
 }
 
 @media (max-width: $tablet-width) {
-  .review__slider-container {
-    max-width: 100%;
-  }
-
-  .review__swiper-container {
-    width: 566px;
+  .trainers__swiper-container {
+    width: 84%;
   }
 }
 
 @media (max-width: $mobile-width) {
-  .review__slider-container {
-    width: 100%;
-  }
-
-  .review__swiper-container {
-    width: 90%;
-  }
-
-  .review__slide {
-    width: 100%;
+  .trainers__swiper-container {
+    width: 78%;
   }
 }
