--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/membership.scss";
 @import "blocks/promo.scss";
 @import "blocks/trainers.scss";
+@import "blocks/trainers-swiper.scss";
 @import "blocks/advantages.scss";
 @import "blocks/stock.scss";
 @import "blocks/review.scss";
