feat(index) - add webp graphics

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -126,7 +126,8 @@
 }
 
 .intro img {
-  width: 43.1%;
+  display: block;
+  width: 500px;
   height: 556px;
 }
 
@@ -224,7 +225,7 @@
   }
 
   .intro img {
-    width: 48%;
+    width: 324px;
     height: 390px;
   }
 
