--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -57,6 +57,7 @@
   background-color: transparent;
   width: 46%;
   padding: 6px 0;
+  padding-left: 2px;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -71,7 +72,7 @@
   }
 
   &:focus {
-    outline: 2px solid #9b9b9b;
+    outline: 1px solid #9b9b9b;
   }
 }
 
