--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -16,6 +16,72 @@
   margin-bottom: 52px;
 }
 
+.trainers__slider-container {
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.trainers__swiper-container {
+  width: 91.3%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.trainers__wrapper {
+  display: flex;
+  width: 100%;
+}
+
+.trainers__slide {
+  position: relative;
+  box-sizing: border-box;
+  flex-shrink: 0;
+
+  &:hover .trainers__popup {
+    display: flex;
+  }
+}
+
+.trainers__button-prev,
+.trainers__button-next {
+  position: static;
+  padding: 0;
+  margin-top: 5px;
+  background-color: transparent;
+  width: auto;
+  height: auto;
+  border: none;
+  cursor: pointer;
+
+  &::after {
+    display: none;
+  }
+
+  & svg {
+    width: 16px;
+    height: 32px;
+  }
+}
+
+.trainers__button-prev:hover,
+.trainers__button-next:hover {
+  & svg {
+    opacity: 0.6;
+  }
+}
+
+.trainers__button-prev:active,
+.trainers__button-next:active {
+  & svg {
+    opacity: 0.4;
+  }
+}
+
 .trainers__slide-title {
   font-size: 18px;
   line-height: 27px;
@@ -114,6 +180,10 @@
     text-align: center;
     margin-bottom: 41px;
   }
+
+  .trainers__swiper-container {
+    width: 84%;
+  }
 }
 
 @media (max-width: $mobile-width) {
@@ -127,6 +197,10 @@
     font-size: 32px;
     line-height: 32px;
     margin-bottom: 43px;
+  }
+
+  .trainers__swiper-container {
+    width: 78%;
   }
 
   .trainers__slide img {
