feat(index) - fix npm test and validation errors

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   background: linear-gradient(to right, #102654 50.01%, #ffffff 50.01%);
-  border-top: 1px solid #74819C;
+  border-top: 1px solid #74819c;
 }
 
 .contacts__container {
