--- a/source/sass/blocks/membership.scss
+++ b/source/sass/blocks/membership.scss
@@ -142,7 +142,7 @@
   line-height: 24px;
   font-style: normal;
   font-weight: normal;
-  color: #495A7D;
+  color: #495a7d;
   margin-bottom: 65px;
 }
 
@@ -162,7 +162,7 @@
   line-height: 90px;
   font-style: normal;
   font-weight: bold;
-  color: #103AAE;
+  color: #103aae;
   margin-bottom: 35px;
   z-index: 5;
 }
