--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -131,7 +131,7 @@
   line-height: 32px;
   font-style: normal;
   font-weight: bold;
-  color: #1C3374;
+  color: #1c3374;
   margin: 0;
   margin-bottom: 8px;
 }
