--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -72,7 +72,7 @@
   border: none;
   border-radius: 50%;
   background: linear-gradient(44.89deg, #003d85 25.38%, #b80027 74.89%);
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 
   &:hover {
@@ -156,6 +156,7 @@
     padding-top: 70px;
     padding-bottom: 71px;
   }
+
   .about__text {
     padding-right: 5%;
     padding-left: 5%;
