--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -90,7 +90,7 @@
   padding-bottom: 58px;
   padding-left: 60px;
   background: #1c3374;
-  box-shadow: 0px 0px 40px rgba(28, 51, 116, 0.2);
+  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
 }
 
 .review__card img {
