--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -1,5 +1,5 @@
 .trainers__container {
-  width: 85%;
+  width: 93%;
   max-width: 1272px;
   margin: 0 auto;
   padding-top: 88px;
@@ -14,6 +14,7 @@
   color: #102654;
   margin: 0;
   margin-bottom: 52px;
+  margin-left: 4.5%;
 }
 
 .trainers__slider-container {
@@ -172,6 +173,7 @@
   .trainers__container {
     width: 88%;
     padding-top: 68px;
+    padding-bottom: 100px;
   }
 
   .trainers h2 {
@@ -179,6 +181,7 @@
     line-height: 42px;
     text-align: center;
     margin-bottom: 41px;
+    margin-left: 0;
   }
 
   .trainers__swiper-container {
