--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,54 +1,26 @@
 .intro {
   background: linear-gradient(to top right, #003d85, #b80027);
   background-image: conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+  position: relative;
+  z-index: -1;
+  margin-top: -54px;
+  padding-top: 51px;
 }
 
 .intro__container {
   width: 85%;
   max-width: 1160px;
   margin: 0 auto;
-  padding-bottom: 48px;
+  padding-bottom: 51px;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
 }
 
-.intro__top {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 28px;
-}
-
-.intro__main-link {
-  font-family: $second-font;
-  font-size: 26px;
-  line-height: 26px;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-}
-
-.intro__tel {
-  font-family: $second-font;
-  font-size: 26px;
-  line-height: 26px;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  text-decoration: none;
-
-  &:hover {
-    opacity: 0.6;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
 .intro__info {
   width: 34%;
   min-width: 370px;
-  padding-top: 113px;
+  padding-top: 116px;
   margin-right: 5.7%;
   display: flex;
   flex-wrap: wrap;
@@ -171,28 +143,13 @@
 @media (max-width: $tablet-width) {
   .intro {
     background: conic-gradient(from 139.4deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+    margin-top: -62px;
+    padding-top: 82px;
   }
 
   .intro__container {
     width: 88%;
     padding-bottom: 82px;
-  }
-
-  .intro__top {
-    padding-top: 38px;
-    margin-bottom: 20px;
-  }
-
-  .intro__main-link {
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-  }
-
-  .intro__tel {
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
   }
 
   .intro__info {
@@ -237,25 +194,13 @@
 @media (max-width: $mobile-width) {
   .intro {
     background: conic-gradient(from 171.43deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+    margin-top: -38px;
+    padding-top: 58px;
   }
 
   .intro__container {
     width: 91%;
     padding-bottom: 0;
-  }
-
-  .intro__top {
-    padding-top: 18px;
-  }
-
-  .intro__main-link {
-    font-size: 20px;
-    line-height: 20px;
-  }
-
-  .intro__tel {
-    font-size: 20px;
-    line-height: 20px;
   }
 
   .intro__info {
