--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -184,6 +184,10 @@
     margin-left: 0;
   }
 
+  .trainers__slider-container {
+    width: 675px;
+  }
+
   .trainers__swiper-container {
     width: 84%;
   }
@@ -200,6 +204,11 @@
     font-size: 32px;
     line-height: 32px;
     margin-bottom: 43px;
+  }
+
+  .trainers__slider-container {
+    width: 100%;
+    max-width: 310px;
   }
 
   .trainers__swiper-container {
