--- a/source/sass/blocks/membership.scss
+++ b/source/sass/blocks/membership.scss
@@ -10,7 +10,7 @@
   max-width: 1160px;
   margin: 0 auto;
   padding-top: 118px;
-  padding-bottom: 190px;
+  padding-bottom: 170px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -91,6 +91,7 @@
   margin: 0;
   padding: 0;
   display: none;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   &--active {
@@ -101,6 +102,7 @@
 .membership__type-item {
   width: 31%;
   background-color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .membership__type-link {
