--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -139,7 +139,7 @@
 
 .promo img {
   display: block;
-  width: 660px;
+  width: 100%;
   height: 500px;
 }
 
@@ -227,9 +227,12 @@
   }
 
   .promo__text {
-    width: 100%;
-    padding-right: 15.3%;
-    padding-left: 15.3%;
+    width: 82%;
+    max-width: 450px;
+  }
+
+  .promo h2 {
+    max-width: 230px;
   }
 
   .promo img {
