--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -30,7 +30,6 @@
   padding: 0;
   margin: 0 auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -43,6 +42,8 @@
 
 .review__slide {
   width: auto;
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   flex-shrink: 0;
 }
@@ -50,6 +51,7 @@
 .review__button-prev,
 .review__button-next {
   position: static;
+  align-self: center;
   padding: 0;
   margin-top: 5px;
   background-color: transparent;
