--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -149,7 +149,7 @@
   .intro__container {
     width: 88%;
     padding-bottom: 82px;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   .intro__info {
