--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -23,6 +23,7 @@
   padding-right: 6.6%;
   padding-bottom: 85px;
   padding-left: 6.8%;
+  background-color: #ed0233;
 }
 
 .promo h2 {
@@ -229,6 +230,7 @@
   .promo__text {
     width: 82%;
     max-width: 450px;
+    background-color: transparent;
   }
 
   .promo h2 {
