--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -186,6 +186,7 @@
     padding-bottom: 36px;
     padding-left: 25px;
     position: relative;
+    box-shadow: none;
   }
 
   .review__card img {
