--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -254,6 +254,7 @@
     padding-top: 70px;
     padding-right: 0;
     padding-left: 0;
+    background-color: transparent;
   }
 
   .contacts__title {
